# opdrachtCPP

./: .gitignore  CMakeLists.txt  README.md  explosiveview.cpp  explosiveview.h  images.qrc  localtest_server.md  main.cpp  mainwindow.cpp  mainwindow.h  part.cpp  part.h  pdfhandler.cpp  pdfhandler.h  resources.qrc  scarh.cpp  scarh.h  scarl.cpp  scarl.h  weapon.cpp  weapon.h  weaponSystem.pro  weaponmanager.cpp  weaponmanager.h  websocketserver.cpp  websocketserver.h
.obsidian/: workspace.json
resources/: explodedView.qrc  images.qrc  pdf.qrc
